force-app/main/default/objects/Product_History__c/Product_History__c.object-meta.xml
<CustomObject>
    <description>Phase 2 - Stores history of updated products</description>
    <label>Product History</label>
    <nameField>
        <displayFormat>PH-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Histories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>